body copy styled

--- a/components/index.html
+++ b/components/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
     
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> Components | One Earth </title>
-        
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title> Components | One Earth </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/main.css">
 
-</head>
+    </head>
 
-<body>
-    <h1>Home Page Goes Here Later</h1>
+    <body>
+        <h1>Web Components</h1>
+        <article class="impact">
+            <div class="pretitle">
+                <h4>Our Impact</h4>
+            </div>
+            <div class="title">
+                <h2>Turning knowledge into action</h2>
+            </div>
+            <div class="text">
+                <p>By identifying and elevating the most effective climate and biodiversity solutions we are helping shape policy, guide investments, support grassroots organizations, and galvanize a global movement dedicated to regenerating our one Earth.</p>
+            </div>
+        </article>
 
-</body>
+    </body>
 
 </html>
