--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ body {
   font-family: var(--font-sans-serif);
   color: var(--dark-gray);
   font-size: 16;
+  margin: 1rem 30rem 1rem 1rem;
 }
 
 h1, h2, h3, h4, h5 {
