Updates font weight

--- a/css/main.css
+++ b/css/main.css
@@ -24,22 +24,30 @@ html {
 body {
   font-family: var(--font-sans-serif);
   color: var(--dark-gray);
-  font-size: 16;
-  margin: 1rem 30rem 1rem 1rem;
+  font-size: 0.9rem;
+  margin: 0rem 30rem 0rem 1rem;
+  line-height: 1.35;
+  font-weight: 600;
 }
 
 h1, h2, h3, h4, h5 {
   font-family: var(--font-serif);
   color: var(--black);
-  line-height: 1;
+  line-height: 1.2;
+  margin: 0;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 2.1rem;
+  font-weight: 600;
 }
 
 h4 {
-  font-size: 16;
+  font-size: 0.9rem;
   text-transform: uppercase;
-  font-weight: normal;
+  font-weight: 600;
+}
+
+.impact {
+   margin: 0rem 1rem 0rem 18rem;
 }
