--- a/components/index.html
+++ b/components/index.html
@@ -14,6 +14,10 @@
     </head>
 
     <body>
+        <div class="component__img">
+        <img srcset="img/impact-title.png 1.2x" alt="impact title">
+        </div>
+        
         <article class="impact">
             <div class="pretitle">
                 <h4>Our Impact</h4>
