--- a/components/index.html
+++ b/components/index.html
@@ -1,35 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title> Components | One Earth </title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/main.css">
-    </head>
 
-    <body>
-        <div class="component__img">
-        <img srcset="img/impact-title.png 1.2x" alt="impact title">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> Components | One Earth </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/main.css">
+</head>
+
+<body>
+    <div class="component__img">
+        <img srcset="img/header.png" alt="header title">
+    </div>
+
+    <article class="header">
+        <img src="img/one-earth.svg" alt="One Earth" width="153" height="70">
+        <div class="header__nav">
+            <ul>
+                <li>REPORTS</li>
+                <li>TOOLS</li>
+                <li>STORIES</li>
+                <li>ABOUT</li>
+                <li>Donate</li>
+                <li>search</li>
+            </ul>
         </div>
-        
-        <article class="impact">
-            <div class="pretitle">
-                <h4>Our Impact</h4>
-            </div>
-            <div class="title">
-                <h2>Turning knowledge into action</h2>
-            </div>
-            <div class="text">
-                <p>By identifying and elevating the most effective climate and biodiversity solutions we are helping shape policy, guide investments, support grassroots organizations, and galvanize a global movement dedicated to regenerating our one Earth.</p>
-            </div>
-        </article>
+    </article>
 
-    </body>
+    <div class="component__img">
+        <img srcset="img/impact-title.png 1.2x" alt="impact title">
+    </div>
+
+    <article class="impact">
+        <div class="pretitle">
+            <h4>Our Impact</h4>
+        </div>
+        <div class="title">
+            <h2>Turning knowledge into action</h2>
+        </div>
+        <div class="text">
+            <p>By identifying and elevating the most effective climate and biodiversity solutions we are helping shape
+                policy, guide investments, support grassroots organizations, and galvanize a global movement dedicated
+                to regenerating our one Earth.</p>
+        </div>
+    </article>
+
+</body>
 
 </html>
