Update header-hero section

--- a/components/index.html
+++ b/components/index.html
@@ -16,26 +16,46 @@
 </head>
 
 <body>
+    <!-- This is the header-hero section-->
     <div class="component__img">
-        <img srcset="img/header.png" alt="header title">
+        <img srcset="img/header-hero.png" alt="header title" width="1500">
     </div>
-
-    <article class="header">
-        <img src="img/one-earth.svg" alt="One Earth" width="153" height="70">
-        <div class="header__nav">
-            <ul>
-                <li>REPORTS</li>
-                <li>TOOLS</li>
-                <li>STORIES</li>
-                <li>ABOUT</li>
-                <li>Donate</li>
-                <li>search</li>
-            </ul>
-        </div>
+    <article class="header-hero">
+        <section class="header">
+            <img src="img/one-earth.svg" alt="One Earth" width="153" height="70">
+            <div class="header__nav">
+                <ul class="header__nav-list">
+                    <li><a href="#!"> REPORTS</a></li>
+                    <li><a href="#!"> TOOLS</a></li>
+                    <li><a href="#!"> STORIES</a></li>
+                    <li><a href="#!"> ABOUT</a></li>
+                    <li><a href="#!" class="button--orange"> Donate</a></li>
+                    <li><a href="#!"> Search</a></li>
+                </ul>
+            </div>
+        </section>
+        <section class="hero">
+            <div class="hero__grid-left"><h1>From us vs. them</h1>
+                <h1>One Earth</h1>
+                <h2> Turning climate knowledge into global climate action.</h2>
+                <p>The solutions to the climate crisis already exist. The next step is coordinated action-local to global.</p>
+            </div>
+            <div class="hero__grid-right">
+                <button class="button"><h3>JOIN THE MOVEMENT</h3></button>
+            </div>
+        </section>
     </article>
 
+    <!-- This is the solution section-->
     <div class="component__img">
-        <img srcset="img/impact-title.png 1.2x" alt="impact title">
+        <img srcset="img/soluti" alt="header title" width="1500">
+    </div>
+
+
+
+
+    <div class="component__img">
+        <img srcset="img/impact-title.png 1.2x" alt="impact title" width="1500">
     </div>
 
     <article class="impact">
