--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,6 @@ html {
 
 body {
   font-family: var(--font-sans-serif);
-  color: var(--dark-gray);
   font-size: 0.9rem;
   line-height: 1.35;
   font-weight: 600;
@@ -32,14 +31,20 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-family: var(--font-serif);
-  color: var(--black);
   line-height: 1.2;
   margin: 0;
+}
+
+h1 {
+  font-size: 5rem;
+  font-weight: 600;
 }
 
 h2 {
   font-size: 2.1rem;
   font-weight: 600;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 h4 {
@@ -52,6 +57,67 @@ img {
   display: block;
 }
 
+.header-hero {
+  background-image: url(../img/One-Earth-lands-and-ocean.png);
+  max-width: 100%;
+  color: var(--light-yellow);
+}
+
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header img {
+  margin: 0 0 0 15rem;
+}
+
+.header__nav-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  font-family: var(--font-serif);
+  font-weight: 600;
+}
+
+.header__nav-list a {
+  display: inline-block;
+  text-decoration: none;
+  padding: 0.5rem 1.5rem;
+  color: var(--light-yellow);
+}
+
+.hero {
+  color: var(--light-yellow);
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  column-gap: 5rem;
+  padding: 5rem;
+  font-size: 1rem;
+}
+
+.hero__grid-right {
+  align-self: end;
+}
+
+.button {
+  display: inline-block;
+  border: 1px solid var(--light-yellow);
+  border-radius: 1rem;
+  padding: 0.8rem 1rem;
+  text-decoration: none;
+  color: var(--white);
+  background: transparent;
+  margin: 0.5rem;
+  font-size: 1.2rem;
+}
+
+.button--orange {
+  background: var(--orange);
+  border-radius: 0.5rem;
+}
 .component__img {
   display: block;
 }
@@ -61,4 +127,5 @@ img {
    margin-right: auto;
    text-align: left;
    letter-spacing: -0.5px;
+   color: var(--dark-gray);
 }
