--- a/components/index.html
+++ b/components/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- This is the header-hero section-->
     <div class="component__img">
-        <img srcset="img/header-hero.png" alt="header title" width="1500">
+        <img srcset="img/header-hero.png" alt="header hero" width="1500">
     </div>
     <article class="header-hero">
         <section class="header">
@@ -48,11 +48,145 @@
 
     <!-- This is the solution section-->
     <div class="component__img">
-        <img srcset="img/soluti" alt="header title" width="1500">
+        <img srcset="img/solution.png" alt="solution" width="1500">
     </div>
 
+    <article class="solution">
+        <section class="introduction--solution">
+            <div class="context--solution">
+                <div class="pretitle">
+                    <h4>Our Solution Framework</h4>
+                </div>
+                <div class="title">
+                    <h2>One Earth. Three Pillars.</h2>
+                </div>
+                <div class="text">
+                    <p>A science-based roadmap for building a stable and thriving planet. Our framework outlines 75+ climate solutions across three pillars of action that center nature and equity.</p>
+                </div>
+            </div>
+            <div class="space">
+            </div>
+        </section>
+
+        <section class="images--solution">
+            <div class="energy-transition">
+                <div class="pretitle">
+                    <h4>Pillar I</h4>
+                </div>
+                <div class="title">
+                    <h2>Energy Transition</h2>
+                </div>
+            </div>
+
+            <div class="nature-conservation">
+                <div class="pretitle">
+                    <h4>Pillar II</h4>
+                </div>
+                <div class="title">
+                    <h2>Nature Conservation</h2>
+                </div>
+            </div>
+
+            <div class="regenerative">
+                <div class="pretitle">
+                    <h4>Pillar III</h4>
+                </div>
+                <div class="title">
+                    <h2>Regenerative Agriculture</h2>
+                </div>
+            </div>
+        </section>
+    </article>
+
+    <!-- This is the roadblock section-->
+    <div class="component__img">
+        <img srcset="img/roadblock.png" alt="roadblocksolution" width="1500">
+    </div>
+
+    <article class="roadblock">
+        <section class="roadblock__grid-left">
+            <div class="context--roadblock">
+                <div class="pretitle">
+                    <h4>New Report</h4>
+                </div>
+                <div class="title">
+                    <h2>Minding the Gaps: One Earth's Climate Finance Report</h2>
+                </div>
+                <div class="text">
+                    <p>Explore our 2025 report, which reveals the solutions that are well-resourced, what is being overlooked, and where the greatest opportunities for impact exist.</p>
+                </div>
+            </div>
+        </section>
+        <section class="roadblock__grid-right">
+            <div><h5>Discover the gaps and opportunities</h5></div>
+            <div><a href="#!">View the Report</a></div>
+        </section>
+    </article>
+
+    <!-- This is the tools section-->
+    <div class="component__img">
+        <img srcset="img/tools.png" alt="tools" width="1500">
+    </div>
+
+    <article class="tools">
+        <section class="introduction--tools">
+            <div class="context--tools">
+                <div class="pretitle">
+                    <h4>Our Tools</h4>
+                </div>
+                <div class="title">
+                    <h2>Together, we can solve the climate crisis.</h2>
+                </div>
+            </div>
+            <div class="space">
+            
+            </div>
+        </section>   
+
+        <section class="card--tools">
+            <div class="card">
+                <div class="title">
+                    <h2>Solutions Hub</h2>
+                </div>
+                <div class="text">
+                    <p>Dive into stories, science, and projects that bring climate solutions to life. Our Solutions Hub is designed to inspire action and connect you to a worldwide movement of people creating change.</p>
+                </div>
+                <button class="button"><h5>Explore the Hub</h5></button>
+            </div>
+
+            <div class="card">
+                <div class="title">
+                    <h2>Bioregions Navigator</h2>
+                </div>
+                <div class="text">
+                    <p>Global transformation takes root locally. By caring for your home, you join a worldwide movement to protect our planet. Discover how your bioregion connects you to the Earth's web of life.</p>
+                </div>
+                <button class="button"><h5>Discover your Bioregion</h5></button>
+            </div>
+
+            <div class="card">
+                <div class="title">
+                    <h2>Global Safety Net</h2>
+                </div>
+                <div class="text">
+                    <p>The blueprint of priority lands and oceans that we most urgently need to protect and restore. Learn more about the science and explore where conservation efforts will have the greatest impact.</p>
+                </div>
+                <button class="button"><h5>Start Exploring</h5></button>
+            </div>
+
+            <div class="card">
+                <div class="title">
+                    <h2>Solutions Finance Tracker</h2>
+                </div>
+                <div class="text">
+                    <p>A powerful new tool built with our partners at Vibrant Data Labs that maps how billions in climate funding is flowing to solutions across Energy Transition, Nature Conservation, and Regenerative Agriculture.</p>
+                </div>
+                <button class="button"><h5>Discover the Data</h5></button>
+            </div>
+        </section>
 
 
+    </article>
 
     <div class="component__img">
         <img srcset="img/impact-title.png 1.2x" alt="impact title" width="1500">
