--- a/components/index.html
+++ b/components/index.html
@@ -184,8 +184,6 @@
                 <button class="button"><h5>Discover the Data</h5></button>
             </div>
         </section>
-
-
     </article>
 
     <div class="component__img">
@@ -205,6 +203,58 @@
                 to regenerating our one Earth.</p>
         </div>
     </article>
+
+    <!-- This is the network section-->
+    <div class="component__img">
+        <img srcset="img/network.png" alt="network" width="1500">
+    </div>
+
+    <article class="network">
+        <section class="introduction--network">
+            <div class="context--network">
+                <div class="pretitle">
+                    <h4>Our Network</h4>
+                </div>
+                <div class="title">
+                    <h2>Nature doesn't work in silos, and neither do we</h2>
+                </div>
+                <div class="text">
+                    <p>Lasting solutions emerge when scientists, Indigenous stewards, community and business leaders, policymakers, philanthropists, and citizens unite with a common purpose-turning fragmented efforts into coordinated action for the planet.</p>
+                </div>
+            </div>
+            <div class="space">
+            
+            </div>
+        </section>   
+
+        <section class="card--network">
+            <div class="card">
+                <div class="text">
+                    <p>"One Earth is a shining example of what can be achieved when passion and purpose converge. They transform lofty dreams into reality with dedication and determination. Their impact on our world is immense, deserving of our utmost acclaim and gratitude."</p>
+                    <p>-Akashinga</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="text">
+                    <p>"One earth is on the cutting edge of climate and biodiversity science, and is one of the most enlightened organizations around. Their work on supporting Indigenous peoples and nature is one of the most important priorities on the planet."</p>
+                    <p>-Jamison Ervin, Manager of UNDP's Global Nature for Development Program</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="text">
+                    <p>"Perhaps the most amazing benefit of working with One Earth is the degree to which this team lives its values-their generosity of spirit, collaborative approach, and commitment to nature-based solutions are present in every step."</p>
+                    <p>-Shira Abramowitz, Founder, Summit Impact</p>
+                </div>
+            </div>
+        </section>
+
+            <button class="button"><h5>Explore our Network</h5></button>
+            
+        
+    </article>
+
 
 </body>
 
