--- a/components/index.html
+++ b/components/index.html
@@ -228,31 +228,36 @@
         </section>   
 
         <section class="card--network">
-            <div class="card">
+            <div class="card-1">
                 <div class="text">
+                    <blockquote>
                     <p>"One Earth is a shining example of what can be achieved when passion and purpose converge. They transform lofty dreams into reality with dedication and determination. Their impact on our world is immense, deserving of our utmost acclaim and gratitude."</p>
+                    </blockquote>
                     <p>-Akashinga</p>
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card-1">
                 <div class="text">
+                    <blockquote>
                     <p>"One earth is on the cutting edge of climate and biodiversity science, and is one of the most enlightened organizations around. Their work on supporting Indigenous peoples and nature is one of the most important priorities on the planet."</p>
+                    </blockquote>
                     <p>-Jamison Ervin, Manager of UNDP's Global Nature for Development Program</p>
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card-1">
                 <div class="text">
+                    <blockquote>
                     <p>"Perhaps the most amazing benefit of working with One Earth is the degree to which this team lives its values-their generosity of spirit, collaborative approach, and commitment to nature-based solutions are present in every step."</p>
+                    </blockquote>
                     <p>-Shira Abramowitz, Founder, Summit Impact</p>
                 </div>
             </div>
         </section>
 
-            <button class="button"><h5>Explore our Network</h5></button>
+        <button class="button"><h5>Explore our Network</h5></button>
             
-        
     </article>
 
 
