--- a/components/index.html
+++ b/components/index.html
@@ -260,6 +260,55 @@
             
     </article>
 
+    <!-- This is the prefooter section-->
+    <div class="component__img">
+        <img srcset="img/prefooter.png" alt="prefooter" width="1500">
+    </div>
+
+    <article class="prefooter">
+        <section class="card--prefooter">
+            <div class="card-2">
+                <div class="title">
+                    <h2>Donate</h2>
+                </div>
+                <div class="subbutton">
+                    <button class="button"><p>Donate Now</p></button>
+                    <button class="button"><p>Donate Crypto</p></button>
+                    <button class="button"><p>Donate Stock</p></button>
+                    <button class="button"><p>Donate Through DAF</p></button>
+                    <button class="button"><p>More Ways</p></button>
+                </div>
+            </div>
+            
+            <div class="card-2">
+                <div class="title">
+                    <h2>Subscribe</h2>
+                </div>
+                <div class="subbutton">
+                    <button class="button"><p>The One Earth Newsletter</p></button>
+                </div>
+            </div>
+
+            <div class="card-2">
+                <div class="title">
+                    <h2>Connect</h2>
+                </div>
+                <div class="subbutton">
+                    <button class="button"><p>Instagram</p></button>
+                    <button class="button"><p>Facebook</p></button>
+                    <button class="button"><p>Bluesky</p></button>
+                    <button class="button"><p>Linkedin</p></button>
+                    <button class="button"><p>TikTok</p></button>
+                    <button class="button"><p>YouTube</p></button>
+                    <button class="button"><p>Medium</p></button>
+                    <button class="button"><p>Threads</p></button>
+                </div>
+            </div>
+            
+        </section>
+            
+    </article>
+
 
 </body>
 
