--- a/components/index.html
+++ b/components/index.html
@@ -309,6 +309,80 @@
             
     </article>
 
+    <!-- This is the footer section-->
+    <div class="component__img">
+        <img srcset="img/footer.png" alt="footer" width="1500">
+    </div>
+
+    <article class="footer">
+        <section class="footer__header"></section>
+
+        <section class="introduction--footer">
+            <div class="context--footer">
+                <div class="title">
+                    <h2>Creating momentum with solutions, strategy, and storytelling.</h2>
+                </div>
+                <div class="text">
+                    <p>One Earth provides tools and resources to help philanthropists, investors, policymakers, and everyday citizens create impact where it matters most.</p>
+                </div>
+            </div>
+
+            <section class="card--footer">
+                <div class="card-3">
+                    <div class="list__link">
+                        <ul>
+                            <li class="title"><h5>About</h5></li>
+                            <li><a href="https://www.oneearth.org/our-mission/">Mission & Vision</a></li>
+                            <li><a href="https://www.oneearth.org/team/">Our Team</a></li>
+                            <li><a href="https://www.oneearth.org/advisors/">Advisors</a></li>
+                            <li><a href="https://www.oneearth.org/partners/">Our Network</a></li>
+                            <li><a href="https://www.oneearth.org/solutions/">Solutions Framework</a></li>
+                            <li><a href="https://www.oneearth.org/reports-financials/">Reports & Financials</a></li>
+                            <li><a href="https://www.oneearth.org/press">Press</a></li>
+                        </ul> 
+                    </div>
+                </div>
+            
+                <div class="card-3">
+                    <div class="list__link">
+                        <ul>
+                            <li class="title"><h5>Explore</h5></li>
+                            <li><a href="https://www.oneearth.org/categories/">Explore Solutions Hub</a></li>
+                            <li><a href="https://www.oneearth.org/bioregions/">Explore Bioregions</a></li>
+                            <li><a href="https://www.oneearth.org/stories/">Read Stories</a></li>
+                            <li><a href="https://www.oneearth.org/videos/">Watch Videos</a></li>
+                            <li><a href="https://www.oneearth.org/books/">Books & Film List</a></li>
+                            <li><a href="https://www.oneearth.org/citations/">Research Database</a></li>
+                            <li><a href="https://www.oneearth.org/reports/">View Reports</a></li>
+                            <li><a href="https://www.oneearth.org/glossary/">Glossary</a></li>
+                        </ul> 
+                    </div>
+                </div>
+
+                <div class="card-3">
+                    <div class="list__link">
+                        <ul>
+                            <li class="title"><h5>Take Action</h5></li>
+                            <li><a href="https://www.oneearth.org/join/">Join the Movement</a></li>
+                            <li><a href="https://www.oneearth.org/navigator/">Discover your Bioregion</a></li>
+                            <li><a href="https://www.oneearth.org/101-climate-solutions-you-can-do-at-home/">101 Home Climate Solutions</a></li>
+                            <li><a href="https://www.oneearth.org/contactus/">Contact Us</a></li>
+                        </ul> 
+                    </div>
+                </div>
+            </section>
+        </section>
+
+        <div class="footer__nav">
+            <ul class="footer__nav-list">
+                <li><a href="https://www.oneearth.org/sitemap/"> Sitemap</a>|<a href="https://www.oneearth.org/contactus/"> Contact</a></li>
+                <li> One Earth | EIN: 85-2588841</li>
+                <li><a href="https://www.oneearth.org/terms/"> Terms</a>|<a href="https://www.oneearth.org/policies/"> Policies</a></li>
+            </ul>
+        </div>
+        
+            
+    </article>
 
 </body>
 
